# hackrizen-movie-collection-manager

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  movie_collection_export.csv  movies.json
.claude/: settings.local.json
docs/: hackrizen_movie-collection-manager_documentation.docx  hackrizen_movie_collection_manager.pptx
include/: data.h  logic.h  network.h  presentation.h  protocol.h  theme.h  ui_anim.h
src/: data.cpp  logic.cpp  main.cpp  network.cpp  presentation.cpp  protocol.cpp  theme.cpp  ui_anim.cpp
